--- a/pylon_ros2_camera_component/CMakeLists.txt
+++ b/pylon_ros2_camera_component/CMakeLists.txt
@@ -22,7 +22,7 @@ ENDIF(NOT CMAKE_BUILD_TYPE)
 
 if(CMAKE_BUILD_TYPE MATCHES Release)
    #message(" * Release Mode")
-   add_compile_options(-Wno-deprecated-declarations)
+   add_compile_options(-Wno-deprecated-declarations -w)
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
